--- a/signup.html
+++ b/signup.html
@@ -54,33 +54,29 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
-                                    <ul class="submenu">
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="pages.html">Company</a></li>
-                                        <li><a href="templates.html">Story</a></li>
-                                        <li><a href="template-single.html">Our Mission</a></li>
-                                    </ul>
-                                </li>
-                                <li>
                                     <a href="#0">Course</a>
                                     <ul class="submenu">
-
-                                        <li><a href="about.html">Web Design</a></li>
-                                        <li><a href="team.html">Content Writing</a></li>
-                                        <li><a href="signup.html">Sign Up</a></li>
-                                        <li><a href="signin.html">Sign In</a></li>
-                                        <li><a href="forgot-pass.html">Reset Password</a></li>
-                                        <li><a href="404.html">404 Error</a></li>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
+                                        <li><a href="courses.html">Courses</a></li>
+                                        <li><a href="course-details.html">Courses Details</a></li>
+                                        <li><a href="mentor.html">Mentor</a></li>
+                                        <li><a href="mentor-details.html">Mentor Details</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="#0">Blog</a>
                                     <ul class="submenu">
-                                        <li><a href="blog.html">Blog 1</a></li>
-                                        <li><a href="blog-2.html">Blog 2</a></li>
-                                        <li><a href="blog-single.html">Blog Single</a></li>
+                                        <li><a href="blog.html">Blog </a></li>
+                                        <li><a href="blog-details.html">Blog Detils</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#0">Pages</a>
+                                    <ul class="submenu">
+                                        <li><a href="about.html">About Us</a></li>
+                                        <li><a href="signup.html">Sign Up</a></li>
+                                        <li><a href="signin.html">Sign In</a></li>
+                                        <li><a href="forgot-pass.html">Reset Password</a></li>
+                                        <li><a href="404.html">404 Error</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -221,7 +217,8 @@
                                     </div> -->
                                 </div>
 
-                                <button type="submit" class="trk-btn trk-btn--border trk-btn--secondary1 d-block mt-4">Sign Up</button>
+                                <button type="submit"
+                                    class="trk-btn trk-btn--border trk-btn--secondary1 d-block mt-4">Sign Up</button>
                             </form>
                             <!-- account social -->
                             <div class="account__social">
@@ -367,7 +364,7 @@
                                 </div>
                             </div>
 
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="footer__bottom">
@@ -409,17 +406,18 @@
 
 
     <!-- vendor plugins -->
-    <script src="assets/js/jquery-3.6.3.min.js"></script>
+
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
-    <script src="assets/js/fslightbox.js"></script>
+        <script src="assets/js/fslightbox.js"></script>
+    <script src="assets/js/vanilla-counter.js"></script>
 
 
 
     <script src="assets/js/custom.js"></script>
-    <!-- <script src="assets/js/main.js"></script> -->
+
 
 </body>
 
