--- a/mentor-details.html
+++ b/mentor-details.html
@@ -54,33 +54,29 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
-                                    <ul class="submenu">
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="pages.html">Company</a></li>
-                                        <li><a href="templates.html">Story</a></li>
-                                        <li><a href="template-single.html">Our Mission</a></li>
-                                    </ul>
-                                </li>
-                                <li>
                                     <a href="#0">Course</a>
                                     <ul class="submenu">
-
-                                        <li><a href="about.html">Web Design</a></li>
-                                        <li><a href="team.html">Content Writing</a></li>
-                                        <li><a href="signup.html">Sign Up</a></li>
-                                        <li><a href="signin.html">Sign In</a></li>
-                                        <li><a href="forgot-pass.html">Reset Password</a></li>
-                                        <li><a href="404.html">404 Error</a></li>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
+                                        <li><a href="courses.html">Courses</a></li>
+                                        <li><a href="course-details.html">Courses Details</a></li>
+                                        <li><a href="mentor.html">Mentor</a></li>
+                                        <li><a href="mentor-details.html">Mentor Details</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="#0">Blog</a>
                                     <ul class="submenu">
-                                        <li><a href="blog.html">Blog 1</a></li>
-                                        <li><a href="blog-2.html">Blog 2</a></li>
-                                        <li><a href="blog-single.html">Blog Single</a></li>
+                                        <li><a href="blog.html">Blog </a></li>
+                                        <li><a href="blog-details.html">Blog Detils</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#0">Pages</a>
+                                    <ul class="submenu">
+                                        <li><a href="about.html">About Us</a></li>
+                                        <li><a href="signup.html">Sign Up</a></li>
+                                        <li><a href="signin.html">Sign In</a></li>
+                                        <li><a href="forgot-pass.html">Reset Password</a></li>
+                                        <li><a href="404.html">404 Error</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -141,13 +137,14 @@
                         </div>
                     </div>
                     <div class="col-lg-8">
-                        <div class="team__content"> 
+                        <div class="team__content">
                             <h3>Marvin McKinney</h3>
                             <p class="designation">Web Designer, Researcher, Instructor at Tork</p>
                             <span><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                                     class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
                                     class="fa-solid fa-star"></i> 5.0</span>
-                            <p class="info">A Zend-certified PHP developer and an active community person who loves to lead and
+                            <p class="info">A Zend-certified PHP developer and an active community person who loves to
+                                lead and
                                 engage with other developers. A full-stack developer with a strong programming
                                 background and experience in Alpine.js, Vue.js, React.js, Laravel, Headless/Server less
                                 applications, API development, RDBMS, WordPress, and System Architecture.</p>
@@ -503,23 +500,24 @@
 
 
     <!-- scrollToTop start here -->
-    <!-- <a href="#" class="scrollToTop"><i class="fa-solid fa-arrow-up-from-bracket"></i></a> -->
+    <a href="#" class="scrollToTop scrollToTop--home1"><i class="fa-solid fa-arrow-up-from-bracket"></i></a>
     <!-- scrollToTop ending here -->
 
 
 
     <!-- vendor plugins -->
-    <script src="assets/js/jquery-3.6.3.min.js"></script>
+
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
-    <script src="assets/js/fslightbox.js"></script>
+        <script src="assets/js/fslightbox.js"></script>
+    <script src="assets/js/vanilla-counter.js"></script>
 
 
 
     <script src="assets/js/custom.js"></script>
-    <!-- <script src="assets/js/main.js"></script> -->
+
 
 </body>
 
