--- a/mentor.html
+++ b/mentor.html
@@ -54,33 +54,29 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
-                                    <ul class="submenu">
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="pages.html">Company</a></li>
-                                        <li><a href="templates.html">Story</a></li>
-                                        <li><a href="template-single.html">Our Mission</a></li>
-                                    </ul>
-                                </li>
-                                <li>
                                     <a href="#0">Course</a>
                                     <ul class="submenu">
-
-                                        <li><a href="about.html">Web Design</a></li>
-                                        <li><a href="team.html">Content Writing</a></li>
-                                        <li><a href="signup.html">Sign Up</a></li>
-                                        <li><a href="signin.html">Sign In</a></li>
-                                        <li><a href="forgot-pass.html">Reset Password</a></li>
-                                        <li><a href="404.html">404 Error</a></li>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
+                                        <li><a href="courses.html">Courses</a></li>
+                                        <li><a href="course-details.html">Courses Details</a></li>
+                                        <li><a href="mentor.html">Mentor</a></li>
+                                        <li><a href="mentor-details.html">Mentor Details</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="#0">Blog</a>
                                     <ul class="submenu">
-                                        <li><a href="blog.html">Blog 1</a></li>
-                                        <li><a href="blog-2.html">Blog 2</a></li>
-                                        <li><a href="blog-single.html">Blog Single</a></li>
+                                        <li><a href="blog.html">Blog </a></li>
+                                        <li><a href="blog-details.html">Blog Detils</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#0">Pages</a>
+                                    <ul class="submenu">
+                                        <li><a href="about.html">About Us</a></li>
+                                        <li><a href="signup.html">Sign Up</a></li>
+                                        <li><a href="signin.html">Sign In</a></li>
+                                        <li><a href="forgot-pass.html">Reset Password</a></li>
+                                        <li><a href="404.html">404 Error</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -132,7 +128,7 @@
 
 
     <!-- ===============>> Team section start here <<================= -->
-    <section class="team team--style1 padding-top  padding-bottom" data-aos="fade-up" data-aos-duration="800"> 
+    <section class="team team--style1 padding-top  padding-bottom" data-aos="fade-up" data-aos-duration="800">
         <div class="container">
             <div class="section-header text-center">
                 <h2>Meet the Expert Creator</h2>
@@ -152,7 +148,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="team__item">
@@ -490,7 +486,7 @@
                                 </div>
                             </div>
 
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="footer__bottom">
@@ -526,23 +522,24 @@
 
 
     <!-- scrollToTop start here -->
-    <!-- <a href="#" class="scrollToTop"><i class="fa-solid fa-arrow-up-from-bracket"></i></a> -->
+    <a href="#" class="scrollToTop scrollToTop--home1"><i class="fa-solid fa-arrow-up-from-bracket"></i></a>
     <!-- scrollToTop ending here -->
 
 
 
     <!-- vendor plugins -->
-    <script src="assets/js/jquery-3.6.3.min.js"></script>
+
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
-    <script src="assets/js/fslightbox.js"></script>
+        <script src="assets/js/fslightbox.js"></script>
+    <script src="assets/js/vanilla-counter.js"></script>
 
 
 
     <script src="assets/js/custom.js"></script>
-    <!-- <script src="assets/js/main.js"></script> -->
+
 
 </body>
 
