beta version 1.0 done

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                             </div>
 
                             <!-- toggle icons -->
-                            <div class="header-bar d-xl-none">
+                            <div class="header-bar d-xl-none home1">
                                 <span></span>
                                 <span></span>
                                 <span></span>
@@ -136,8 +136,9 @@
                                 <div class="subtitle subtitle--style4">
                                     <p class="mb-0">who we are</p>
                                 </div>
-                                <h2>We Are Providing The Best Quality Online Courses. Our All Instructors Are High
-                                    Expert</h2>
+                                <h2 class="about-title">We are providing the best quality online courses. Our all
+                                    instructors are high
+                                    expert</h2>
                                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have
                                     suffered alteration in some form, by injected humor, or randomized words which don't
                                     look even slightly believable. If you are going to use a passage of Lorem Ipsum, you
@@ -145,19 +146,23 @@
                             </div>
                             <div class="about__counter">
                                 <div class="about__counter-item">
-                                    <h3>256+</h3>
+                                    <h3> <span class="purecounter" data-purecounter-start="200"
+                                            data-purecounter-end="256" data-purecounter-once="false">256</span>+</h3>
                                     <p>Enrolled Learner</p>
                                 </div>
                                 <div class="about__counter-item">
-                                    <h3>2.55+</h3>
+                                    <h3><span class="purecounter" data-purecounter-start="0" data-purecounter-end="89"
+                                            data-purecounter-once="false">89</span></h3>
                                     <p>Finished Session</p>
                                 </div>
                                 <div class="about__counter-item">
-                                    <h3>99%</h3>
+                                    <h3><span class="purecounter" data-purecounter-start="0" data-purecounter-end="99"
+                                            data-purecounter-once="false">99</span>+</h3>
                                     <p>Satisfaction Rate</p>
                                 </div>
                                 <div class="about__counter-item">
-                                    <h3>80+</h3>
+                                    <h3><span class="purecounter" data-purecounter-start="0" data-purecounter-end="80"
+                                            data-purecounter-once="false">80</span>+</h3>
                                     <p>Awards Winning</p>
                                 </div>
                             </div>
@@ -192,7 +197,7 @@
             </div>
             <div class="feature__wrapper">
                 <div class="row g-4">
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-md-4">
                         <div class="feature__item">
                             <div class="feature__item-inner">
                                 <div class="feature__thumb">
@@ -206,7 +211,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-md-4">
                         <div class="feature__item">
                             <div class="feature__item-inner">
                                 <div class="feature__thumb">
@@ -220,7 +225,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-4 col-md-4">
                         <div class="feature__item">
                             <div class="feature__item-inner">
                                 <div class="feature__thumb">
@@ -504,7 +509,7 @@
 
 
     <!-- ===============>> Testimonial section start here <<================= -->
-    <section class="testimonial testimonial--style1 padding-top padding-bottom brand-1">
+    <section class="testimonial testimonial--style1 padding-top padding-bottom brand-1 mb-5">
         <div class="container">
             <div class="section-header text-center section-header--dark">
                 <h2>What Clients Have to Say About Us</h2>
@@ -838,8 +843,8 @@
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
-        <script src="assets/js/fslightbox.js"></script>
-    <script src="assets/js/vanilla-counter.js"></script>
+    <script src="assets/js/fslightbox.js"></script>
+    <script src="assets/js/purecounter_vanilla.js"></script>
 
 
 
