--- a/forgot-pass.html
+++ b/forgot-pass.html
@@ -95,7 +95,7 @@
                             </div>
 
                             <!-- toggle icons -->
-                            <div class="header-bar d-xl-none">
+                            <div class="header-bar d-xl-none home1">
                                 <span></span>
                                 <span></span>
                                 <span></span>
@@ -351,8 +351,8 @@
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
-        <script src="assets/js/fslightbox.js"></script>
-    <script src="assets/js/vanilla-counter.js"></script>
+    <script src="assets/js/fslightbox.js"></script>
+    <script src="assets/js/purecounter_vanilla.js"></script>
 
 
 
