--- a/gallery.html
+++ b/gallery.html
@@ -32,14 +32,14 @@
 
 
     <!-- ===============>> Header section start here <<================= -->
-    <header class="header-section header-section--style2">
+    <header class="header-section brand-4 home4">
         <div class="header-bottom">
             <div class="container">
                 <div class="header-wrapper">
                     <div class="header-start header-start--style1">
                         <div class="logo">
-                            <a href="index.html">
-                                <img src="assets/images/logo/logo.png" alt="logo">
+                            <a href="index-2.html">
+                                <img src="assets/images/logo/logo-4.png" alt="logo">
                             </a>
                         </div>
                         <div class="menu-area">
@@ -89,13 +89,14 @@
                     <div class="header-end">
                         <div class="menu-area">
                             <div class="header-btn">
-                                <a href="signup.html" class="trk-btn trk-btn--rounded trk-btn--primary1">
+                                <a href="signup.html"
+                                    class="trk-btn trk-btn--rounded trk-btn--primary4 trk-btn--style2">
                                     <span>Sign Up</span>
                                 </a>
                             </div>
 
                             <!-- toggle icons -->
-                            <div class="header-bar d-xl-none home1">
+                            <div class="header-bar d-xl-none home4">
                                 <span></span>
                                 <span></span>
                                 <span></span>
@@ -106,19 +107,20 @@
             </div>
         </div>
     </header>
+
     <!-- ===============>> Header section end here <<================= -->
 
 
 
     <!-- ==========Page Header Section Starts Here========== -->
-    <div class="pageheader" style="background-image:url(assets/images/bg/home1/8.png)">
+    <div class="pageheader" style="background-image:url(assets/images/bg/home1/4.png)">
         <div class="container">
             <div class="pageheader__content">
-                <h2>404 Page</h2>
+                <h2>Gallery</h2>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">404 Page</li>
+                        <li class="breadcrumb-item active" aria-current="page">Gallery</li>
                     </ol>
                 </nav>
             </div>
@@ -128,46 +130,99 @@
 
 
 
-
-
-    <!-- ================> 404 section start here <================== -->
-    <section class="error padding-top padding-bottom">
+    <!-- ===============>> Gallery section start here <<================= -->
+    <section class="gallery padding-bottom padding-top" data-aos="fade-up" data-aos-duration="800">
         <div class="container">
-            <div class="section-header text-center ">
-                <h2>OOPS!</h2>
-                <p class="style2">Page not found</p>
+            <div class="section-header text-center">
+                <h2 class="style2-h2 style2-h2--defult">Our Gallery</h2>
             </div>
-        </div>
-        <div class="error__inner">
-            <div class="error__content text-center">
-                <img class=" mb-4" src="assets/images/others/404.png" alt="404 image">
-                <div class="text-center mt-5">
-                    <a href="index.html" class="trk-btn trk-btn--rounded trk-btn--secondary1">Go To Home</a>
+            <div class="gallery__wrapper">
+                <div class="row g-4">
+                    <div class="col-md-4">
+                        <a class="gallery__item" href="assets/images/gallery/home4/1.png" data-fslightbox>
+                            <img class="pb-4" src="assets/images/gallery/home4/1.png" alt="gallery image">
+                        </a>
+                        <a class="gallery__item" href="assets/images/gallery/home4/2.png" data-fslightbox>
+                            <img src="assets/images/gallery/home4/2.png" alt="gallery image">
+                        </a>
+                    </div>
+
+                    <div class="col-md-4">
+                        <a class="gallery__item" href="assets/images/gallery/home4/4.png" data-fslightbox>
+                            <img class="pb-4" src="assets/images/gallery/home4/4.png" alt="gallery image">
+                        </a>
+                        <a class="gallery__item" href="assets/images/gallery/home4/5.png" data-fslightbox>
+                            <img src="assets/images/gallery/home4/5.png" alt="gallery image">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="gallery__item" href="assets/images/gallery/home4/3.png" data-fslightbox>
+                            <img src="assets/images/gallery/home4/3.png" alt="gallery image">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="gallery__item" href="assets/images/gallery/home4/3.png" data-fslightbox>
+                            <img src="assets/images/gallery/home4/3.png" alt="gallery image">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="gallery__item" href="assets/images/gallery/home4/1.png" data-fslightbox>
+                            <img class="pb-4" src="assets/images/gallery/home4/1.png" alt="gallery image">
+                        </a>
+                        <a class="gallery__item" href="assets/images/gallery/home4/2.png" data-fslightbox>
+                            <img src="assets/images/gallery/home4/2.png" alt="gallery image">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="gallery__item" href="assets/images/gallery/home4/4.png" data-fslightbox>
+                            <img class="pb-4" src="assets/images/gallery/home4/4.png" alt="gallery image">
+                        </a>
+                        <a class="gallery__item" href="assets/images/gallery/home4/5.png" data-fslightbox>
+                            <img src="assets/images/gallery/home4/5.png" alt="gallery image">
+                        </a>
+                    </div>
                 </div>
             </div>
-            <!-- <div class="error__thumb">
-                <a href="index.html"><img src="assets/images/error/01.jpg" alt="Event Image"> </a>
-            </div> -->
         </div>
-
     </section>
-    <!-- ================> 404 section end here <================== -->
+    <!-- ===============>> Gallery section end here <<================= -->
 
 
 
+    <!-- ===============>> newsletter start here <<================= -->
+    <div class="newsletter" data-aos="fade-up" data-aos-duration="800">
+        <div class="container">
+            <div class="newsletter__wrapper">
+                <div class="newsletter__content">
+                    <div class="newsletter__content-inner newsletter__content-inner--style4 text-center"
+                        style="background-image:url(assets/images/footer/5.png)">
+                        <h2 class="style2-h2">Enter Your Email To Get The Latest News</h2>
 
-
+                        <form class="form form-subscribe" action="#">
+                            <div class="input-group">
+                                <input type="email" class="form-control" placeholder="Enter your email...">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-success btn-lg" type="submit">Subscribe</button>
+                                </span>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ===============>> newsletter end here <<================= -->
 
 
     <!-- ===============>> footer start here <<================= -->
-    <footer class="footer brand-1" style="background-image:url(assets/images/footer/1.png)">
+    <footer class="footer brand-4" style="background-image:url(assets/images/footer/4.png)">
         <div class="container">
             <div class="footer__wrapper">
-                <div class="footer__top padding-top padding-bottom ">
+                <div class="footer__top footer__top--style1 padding-bottom ">
                     <div class="row g-5">
-                        <div class="col-lg-4">
+                        <div class="col-xl-4 col-md-6">
                             <div class="footer__about">
-                                <a href="index.html" class="footer__about-logo"><img src="assets/images/logo/logo.png"
+                                <a href="index.html" class="footer__about-logo"><img src="assets/images/logo/Logo-4.png"
                                         alt="Logo"></a>
                                 <p class="footer__about-moto">You minim mollit non deserunt ullamco est sit aliqua dolor
                                     do
@@ -176,7 +231,7 @@
                                     sunt nostrud amet.</p>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-sm-6">
+                        <div class="col-xl-3 col-md-6 col-sm-6">
                             <div class="footer__links">
                                 <div class="footer__links-item">
                                     <div class="footer__links-tittle">
@@ -219,7 +274,7 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-2 col-sm-6">
+                        <div class="col-xl-2 col-md-6 col-sm-6">
                             <div class="footer__links">
                                 <div class="footer__links-tittle">
                                     <h6>Explore Links</h6>
@@ -240,7 +295,7 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-3 col-12">
+                        <div class="col-xl-3 col-md-6 col-12">
                             <div class="footer__links">
                                 <div class="footer__links-tittle">
                                     <h6>Office Time</h6>
@@ -259,19 +314,19 @@
                                     </ul>
                                     <ul class="social mt-4">
                                         <li class="social__item">
-                                            <a href="#" class="social__link social__link--rounded1"><i
+                                            <a href="#" class="social__link social__link--rounded4"><i
                                                     class="fab fa-facebook-f"></i></a>
                                         </li>
                                         <li class="social__item">
-                                            <a href="#" class="social__link social__link--rounded1"><i
+                                            <a href="#" class="social__link social__link--rounded4"><i
                                                     class="fab fa-instagram"></i></a>
                                         </li>
                                         <li class="social__item">
-                                            <a href="#" class="social__link social__link--rounded1"><i
+                                            <a href="#" class="social__link social__link--rounded4"><i
                                                     class="fab fa-youtube"></i></a>
                                         </li>
                                         <li class="social__item">
-                                            <a href="signin.html" class="social__link social__link--rounded1"><i
+                                            <a href="signin.html" class="social__link social__link--rounded4"><i
                                                     class="fab fa-twitter"></i></a>
                                         </li>
                                     </ul>
@@ -315,7 +370,7 @@
 
 
     <!-- scrollToTop start here -->
-    <!-- <a href="#" class="scrollToTop"><i class="fa-solid fa-arrow-up-from-bracket"></i></a> -->
+    <a href="#" class="scrollToTop scrollToTop--home4"><i class="fa-solid fa-arrow-up-from-bracket"></i></a>
     <!-- scrollToTop ending here -->
 
 
