--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             </div>
 
                             <!-- toggle icons -->
-                            <div class="header-bar d-xl-none">
+                            <div class="header-bar d-xl-none home1">
                                 <span></span>
                                 <span></span>
                                 <span></span>
@@ -128,7 +128,7 @@
                 </div>
 
                 <!-- banner images -->
-                <div class="banner-image"> 
+                <div class="banner-image">
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-4">
                             <div class="banner-image__item" data-aos="fade-right" data-aos-duration="1000">
@@ -169,7 +169,8 @@
             <div class="banner__shape-item">
                 <div class="reviews">
                     <div class="reviews__content">
-                        <p>365k+ enrolled students</p>
+                        <p><span class="purecounter" data-purecounter-start="300" data-purecounter-end="365"
+                                data-purecounter-once="false">365</span>enrolled students</p>
                     </div>
                     <div class="reviews__thumb">
                         <ul>
@@ -182,7 +183,8 @@
                             <li><img src="assets/images/community/avator/home1/7.png" alt="user image"></li>
                             <li>
                                 <div class="count">
-                                    <span>50+</span>
+                                    <span class="purecounter" data-purecounter-start="0" data-purecounter-end="50"
+                                        data-purecounter-once="false">50</span>+
                                 </div>
                             </li>
                         </ul>
@@ -208,7 +210,7 @@
                             <h2>Explore <br> Our Categories</h2>
                             <p>Look into yourself, get something in return as your AchievementLook into yourself,
                                 get something Return as your achievement</p>
-                            <a href="courses.html" class="trk-btn trk-btn--rounded trk-btn--secondary1">Explore All
+                            <a href="courses.html" class="trk-btn trk-btn--rounded trk-btn--secondary1">Explore
                                 Categories</a>
                         </div>
                     </div>
@@ -354,8 +356,8 @@
                     <div class="col-lg-6">
                         <div class="about__content" data-aos="fade-left" data-aos-duration="800">
                             <div class="about__content-inner">
-                                <p class="subtitle">About Us</p>
-                                <h3>We Are Maximize Your Learning Growth</h3>
+                                <span class="subtitle">About Us</span>
+                                <h2>We Are Maximize Your Learning Growth</h2>
                                 <p>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur
                                     duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempo.</p>
                                 <ul class="about-list">
@@ -567,7 +569,7 @@
                             <p class="style3">Clarity gives you the blocks & components you needto create a truly
                                 professional website, landing page or admin panel for your saas
                                 components you needto create a truly </p>
-                            <a href="mentor.html" class="trk-btn trk-btn--rounded trk-btn--secondary1">See All
+                            <a href="mentor.html" class="trk-btn trk-btn--rounded trk-btn--secondary1">All
                                 Memebers</a>
                         </div>
                     </div>
@@ -693,7 +695,8 @@
                                     <li><img src="assets/images/community/avator/4.png" alt="user image"></li>
                                     <li><img src="assets/images/community/avator/5.png" alt="user image"></li>
                                 </ul>
-                                <span>+2.5k</span>
+                                <span class="purecounter" data-purecounter-start="0" data-purecounter-end="25"
+                                    data-purecounter-once="false">25</span>
                             </div>
                         </div>
                         <img src="assets/images/community/1.png" alt="community image">
@@ -958,7 +961,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="partner__item">
-                                <div class="partner__item-inner"> 
+                                <div class="partner__item-inner">
                                     <img src="assets/images/partner/2.png" alt="partner logo">
                                 </div>
                             </div>
@@ -1182,7 +1185,7 @@
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/fslightbox.js"></script>
-    <script src="assets/js/vanilla-counter.js"></script>
+    <script src="assets/js/purecounter_vanilla.js"></script>
 
 
 
