--- a/index-4.html
+++ b/index-4.html
@@ -156,12 +156,14 @@
             </div>
         </div>
         <div class="banner__shape">
-            <span class="banner__shape-item "><img src="assets/images/shape/home2/1.png" alt="roket"></span>
+            <span class="banner__shape-item banner__shape-item--animation"><img src="assets/images/shape/home2/1.png"
+                    alt="roket"></span>
             <span class="banner__shape-item banner__shpae-item--animation"><img src="assets/images/shape/home2/2.png"
                     alt="book"></span>
             <span class="banner__shape-item banner__shpae-item--animation"><img src="assets/images/shape/home2/3.png"
                     alt="belon"></span>
-            <span class="banner__shape-item"><img src="assets/images/shape/home2/4.png" alt="triangle"></span>
+            <span class="banner__shape-item banner__shpae-item--animation"><img src="assets/images/shape/home2/4.png"
+                    alt="triangle"></span>
         </div>
     </section>
     <!-- ===============>> Banner section end here <<================= -->
@@ -174,7 +176,7 @@
         <div class="container">
             <div class="categories__wrapper">
                 <div class="row g-4">
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="600">
                         <div class="categories__item">
                             <div class="categories__item-inner">
                                 <img src="assets/images/category/home4/1.png" alt="cateogory icon">
@@ -189,7 +191,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="700">
                         <div class="categories__item">
                             <div class="categories__item-inner">
                                 <img src="assets/images/category/home4/2.png" alt="cateogory icon">
@@ -204,7 +206,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="800">
                         <div class="categories__item">
                             <div class="categories__item-inner">
                                 <img src="assets/images/category/home4/3.png" alt="cateogory icon">
@@ -219,7 +221,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="900">
                         <div class="categories__item">
                             <div class="categories__item-inner">
                                 <img src="assets/images/category/home4/4.png" alt="cateogory icon">
@@ -288,7 +290,7 @@
     <!-- ===============>> Popular course section start here <<================= -->
 
     <section class="course course--style4 bg--cover" style="background-image: url(assets/images/bg/home4/1.png);">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center section-header--dark section-header--max20">
                 <h2 class="style2-h2">Most Popular Programs
                     instead of classes.</h2>
@@ -434,12 +436,12 @@
 
 
     <!-- ===============>> Team section start here <<================= -->
-    <section class="team  team--style1 padding-top padding-bottom bg--cover"
-        style="background-image: url(assets/images/bg/home4/2.png);">
+    <section class="team  team--style1 padding-top padding-bottom bg--full"
+        style="background-image: url(assets/images/bg/home4/2.png);" data-aos="fade-up" data-aos-duration="800">
         <div class="container">
             <div class="team__wrapper">
-                <div class="row g-4">
-                    <div class="col-lg-6 col-sm-12">
+                <div class="row g-4 text-center">
+                    <div class="col-lg-6 col-sm-12" data-aos="fade-right" data-aos-duration="800">
                         <div class="team__header">
                             <h2 class="style2-h2">Meet Our Expert</h2>
                             <p class="style2">Clarity gives you the blocks & components you needto create a truly
@@ -452,7 +454,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="team__item">
                             <div class="team__item-inner">
-                                <div class="team__item-thumb">
+                                <div class="team__item-thumb team__item-thumb--style1">
                                     <img src="assets/images/team/home4/1.png" alt="Team Image">
                                 </div>
                                 <div class="team__item-content team__item-content--style1">
@@ -554,7 +556,7 @@
             </div>
             <div class="gallery__wrapper">
                 <div class="row g-4">
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-md-4" data-aos="fade-right" data-aos-duration="800">
                         <a class="gallery__item" href="assets/images/gallery/home4/1.png" data-fslightbox>
                             <img class="pb-4" src="assets/images/gallery/home4/1.png" alt="gallery image">
                         </a>
@@ -562,12 +564,12 @@
                             <img src="assets/images/gallery/home4/2.png" alt="gallery image">
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-md-4" data-aos="fade-up" data-aos-duration="800">
                         <a class="gallery__item" href="assets/images/gallery/home4/3.png" data-fslightbox>
                             <img src="assets/images/gallery/home4/3.png" alt="gallery image">
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-md-4" data-aos="fade-left" data-aos-duration="800">
                         <a class="gallery__item" href="assets/images/gallery/home4/4.png" data-fslightbox>
                             <img class="pb-4" src="assets/images/gallery/home4/4.png" alt="gallery image">
                         </a>
@@ -578,7 +580,7 @@
 
                 </div>
                 <div class="text-center">
-                    <a href="#0" class="trk-btn trk-btn--rounded trk-btn--secondary4 mt-5">See All
+                    <a href="gallery.html" class="trk-btn trk-btn--rounded trk-btn--secondary4 mt-5">See All
                         Gallery
                         <span><span><i class="fa-solid fa-arrow-right"></i></span></span></a>
                 </div>
@@ -590,7 +592,7 @@
 
     <!-- ===============>> Testimonial section start here <<================= -->
     <section class="testimonial testimonial--style1 padding-top padding-bottom brand-4">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center section-header--dark">
                 <h2 class="style2-h2">What did the guardians say to us</h2>
                 <p class="style2">Interdum et malesuada fames ac ante ipsum</p>
@@ -738,7 +740,8 @@
 
 
     <!-- ===============>> Blog section start here <<================= -->
-    <section class="blog blog--style1 padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
+    <section class="blog blog--style1 padding-top padding-bottom bg--defult" data-aos="fade-up" data-aos-duration="800"
+        style="background-image: url(assets/images/bg/home4/3.png);">
         <div class="container">
             <div class="blog__header">
                 <h2 class="style2-h2 style2-h2--defult style2-h2--max20">Latest News, Blog & Articles</h2>
@@ -747,7 +750,7 @@
             </div>
             <div class="blog__wrapper">
                 <div class="row g-4">
-                    <div class="col-lg-4" data-aos="fade-right" data-aos-duration="800">
+                    <div class="col-lg-4 col-md-6" data-aos="fade-right" data-aos-duration="800">
                         <div class="blog__item">
                             <div class="blog__item-inner">
                                 <div class="blog__thumb">
@@ -769,7 +772,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4" data-aos="fade-up" data-aos-duration="800">
+                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-duration="800">
                         <div class="blog__item">
                             <div class="blog__item-inner">
                                 <div class="blog__thumb">
@@ -791,7 +794,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4" data-aos="fade-left" data-aos-duration="800">
+                    <div class="col-lg-4 col-md-6" data-aos="fade-left" data-aos-duration="800">
                         <div class="blog__item">
                             <div class="blog__item-inner">
                                 <div class="blog__thumb">
@@ -1012,8 +1015,8 @@
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
-        <script src="assets/js/fslightbox.js"></script>
-    <script src="assets/js/vanilla-counter.js"></script>
+    <script src="assets/js/fslightbox.js"></script>
+    <script src="assets/js/purecounter_vanilla.js"></script>
 
 
 
