--- a/mentor-details.html
+++ b/mentor-details.html
@@ -95,7 +95,7 @@
                             </div>
 
                             <!-- toggle icons -->
-                            <div class="header-bar d-xl-none">
+                            <div class="header-bar d-xl-none home1">
                                 <span></span>
                                 <span></span>
                                 <span></span>
@@ -131,12 +131,12 @@
         <div class="container">
             <div class="team__wrapper">
                 <div class="row g-5 align-items-center">
-                    <div class="col-lg-4">
+                    <div class="col-md-4">
                         <div class="team__thumb">
                             <img src="assets/images/team/home1/1.png" alt="Team Image">
                         </div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-md-8">
                         <div class="team__content">
                             <h3>Marvin McKinney</h3>
                             <p class="designation">Web Designer, Researcher, Instructor at Tork</p>
@@ -238,7 +238,7 @@
                                         <h6> <a href="#">How to Learning Basic English
                                                 Strategy for Research</a> </h6>
                                         <div class="course__content-bottom">
-                                            <a href="#"><img src="assets/images/avatar/2.png" alt="avatar"> Jenny
+                                            <a href="#"><img src="assets/images/avatar/2.png" alt="avatar">
                                                 Wilsone</a>
                                             <div class="course-price">
                                                 <del>$100</del> <span> $50.00</span>
@@ -271,8 +271,7 @@
                                                 Marketing</a>
                                         </h6>
                                         <div class="course__content-bottom">
-                                            <a href="#"><img src="assets/images/avatar/3.png" alt="avatar"> Theresa
-                                                Webb</a>
+                                            <a href="#"><img src="assets/images/avatar/3.png" alt="avatar"> Theresa</a>
                                             <div class="course-price">
                                                 <del>$100</del> <span> $50.00</span>
                                             </div>
@@ -303,7 +302,7 @@
                                         <h6> <a href="#">How to Learning Basic design
                                                 Strategy for Research.</a> </h6>
                                         <div class="course__content-bottom">
-                                            <a href="#"><img src="assets/images/avatar/4.png" alt="avatar"> Wade
+                                            <a href="#"><img src="assets/images/avatar/4.png" alt="avatar">
                                                 Warren</a>
                                             <div class="course-price">
                                                 <del>$100</del> <span> $50.00</span>
@@ -511,8 +510,8 @@
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
-        <script src="assets/js/fslightbox.js"></script>
-    <script src="assets/js/vanilla-counter.js"></script>
+    <script src="assets/js/fslightbox.js"></script>
+    <script src="assets/js/purecounter_vanilla.js"></script>
 
 
 
